# HelloWorld

project-alvaro/: pyproject.toml
project-alvaro/mysite/helloworld/: views.py
project-alvaro/mysite/mysite/: settings.py  urls.py
